k8s/k3s_prod/nextcloud/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: nextcloud
  name: nextcloud
  labels:
    app: nextcloud
spec:
  type: ClusterIP
  ports:
    - name: service-port
      port: 80
      targetPort: app-port
      protocol: TCP
  selector:
    app: nextcloud
