k8s/k3s_prod/nextcloud/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nextcloud
  namespace: nextcloud
  annotations:
    kubernetes.io/ingress.ingressClassName: "traefik"
    traefik.ingress.kubernetes.io/router.entrypoints: web-private
spec:
  rules:
    - host: nxtcld.twop.ch
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nextcloud
                port:
                  name: service-port
